<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/ten"
    android:orientation="vertical"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="@dimen/product_image_width"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:adjustViewBounds="true"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/ten"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginBottom="@dimen/ten">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_product"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/eighteenText"
                    android:paddingRight="@dimen/three"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="@dimen/eighteenText" />

                <TextView
                    android:id="@+id/item_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    tools:text="Product"
                    android:layout_marginLeft="@dimen/three"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="@dimen/quantity_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/card_quantity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"/>

                <TextView
                    android:id="@+id/item_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Quantity"
                    android:paddingLeft="@dimen/three"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="@dimen/price_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/card_price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Price"
                    android:paddingLeft="@dimen/three"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/sale"
            android:layout_width="@dimen/sale_textview_width"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/sale"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</android.support.v7.widget.CardView>